--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -241,7 +241,7 @@ TODO: Texts
 }
 
 html {
-  font-family: Digital_Disk, "Times New Roman", Times, Georgia, serif;
+  font-family: "Digital Disk", "Times New Roman", Times, Georgia, serif;
   font-size: 1px;
   color: black;
 }
