--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -9,7 +9,7 @@ TODO: Variables
 ◈──────────────────────────────────────────────────────◈ */
 
 
-$font_default: Digital_Disk, 'Times New Roman', Times, Georgia, serif;
+$font_default: 'Digital Disk', 'Times New Roman', Times, Georgia, serif;
 $font_size: 19rem; 
 
 .lineHeight {
