--- a/styles/css/identity.css
+++ b/styles/css/identity.css
@@ -182,13 +182,69 @@ TODO: Download Page
 ◈──────────────────────────────────────────────────────◈
 TODO: Types Table
 ◈──────────────────────────────────────────────────────◈ */
+.types_interactions_box {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.types_interactions {
+  margin-left: 0;
+  margin-right: 0;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: calc(2*16rem);
+}
+
+.types_interactions .name th > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.types_interactions .name th > * img {
+  margin-right: 8px;
+}
+
+.types_interactions td + td {
+  border-width: 1px !important;
+}
+
+.types_interactions .good .txt {
+  color: #00d600;
+  color: #00f000;
+}
+
+.types_interactions .bad .txt {
+  color: #eb0000;
+  color: red;
+}
+
+.types_interactions .txt {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.types_interactions .type_icon {
+  width: 32px;
+}
+
+.types_interactions .effect_icon {
+  width: 28px;
+}
+
+/*  
+◈──────────────────────────────────────────────────────◈
+TODO: Types Table
+◈──────────────────────────────────────────────────────◈ */
 @media (pointer: fine) and (min-width: 501px) and (min-height: 501px) {
   .types_table_msg {
     display: none !important;
   }
 }
 
-.table_box {
+.types_table_box {
   display: none;
   max-height: calc(100vh - 48px - (2 * 16rem));
   margin: auto;
@@ -199,13 +255,13 @@ TODO: Types Table
 }
 
 @media (pointer: fine) and (min-width: 501px) and (min-height: 501px) {
-  .table_box {
+  .types_table_box {
     display: block;
   }
 }
 
 @media (min-width: 501px) {
-  .table_box {
+  .types_table_box {
     max-width: calc(100% - (2 * 20px) - 3px);
   }
 }
@@ -220,6 +276,10 @@ TODO: Types Table
   left: 0;
   z-index: 1;
   border-bottom: 1px solid rgba(0, 200, 255, 0);
+}
+
+.types_table tr th, .types_table tr td {
+  padding: 6.5px;
 }
 
 .types_table tr th {
@@ -266,7 +326,8 @@ TODO: Types Table
 }
 
 .types_table .type_icon {
-  width: 36.8px;
+  width: 32px;
+  height: 32px;
 }
 
 .types_table th, .types_table td {
@@ -278,7 +339,16 @@ TODO: Types Table
 }
 
 .types_table .effect_icon {
-  width: 28px;
+  width: 25px;
+}
+
+.types_table .Robot, .types_table .Snow_Ice {
+  color: white;
+  background-color: black;
+}
+
+.types_table .Snow_Ice {
+  display: none;
 }
 
 @media (pointer: coarse), (pointer: none) {
@@ -289,23 +359,7 @@ TODO: Types Table
   }
 }
 
-/*
-@media (pointer: coarse), (pointer: none) { // Ganbiarra necessária, pois os navegadores mobile n dão suporte à 'position: sticky'.
-
-    .types_table tr:nth-of-type(1), .types_table tr th, .types_table tr:nth-of-type(1) td {
-        position: static;  
-    }
-
-    .types_table .type_icon {
-        width: 24px;
-    }
-
-    .types_table .effect_icon {
-        width: 20px;
-    }
-}
-
-*/
+/**/
 /*  
 ◈──────────────────────────────────────────────────────◈
 TODO: Skills - Table
