--- a/styles/scss/identity.scss
+++ b/styles/scss/identity.scss
@@ -996,44 +996,49 @@ $STC_and_SDSB_FULLHD_margin_horizontal: 20px;
     font-size: 0;
     margin-left: calc(0.5 * #{$margin_horizontal});   
     margin-right: calc(0.5 * #{$margin_horizontal});
+    text-align: center;
+    
+    /* display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around; */
 
     $switchs_margin_horizontal: 10px;
 
     li {
         display: inline-block;
-    }
-
-    li {
-        width: calc((100% - 4 * #{$switchs_margin_horizontal})/2); 
+        width: 144px; 
         margin-left: $switchs_margin_horizontal;
         margin-right: $switchs_margin_horizontal;
-    }
+    } 
 
-    li + li {
-        
-        margin-top: $margin_vertical;
+    li /* + li  */{
+        margin-top: $margin_vertical !important;
     }
 
     .switch {
-        
+        width: inherit;
         height: 42px;
         margin: 0;
     }
+/* 
+    li { width: calc((100% - 2 * #{$switchs_margin_horizontal})/1); } 
 
-    @media (min-width: 410px) { li { width: calc((100% - 6 * #{$switchs_margin_horizontal})/3); } }
+    @media (min-width: 380px) { li { width: calc((100% - 4 * #{$switchs_margin_horizontal})/2); } }
 
-    @media (min-width: 550px) { li { width: calc((100% - 8 * #{$switchs_margin_horizontal})/4); } }
+    @media (min-width: 520px) { li { width: calc((100% - 6 * #{$switchs_margin_horizontal})/3); } }
 
-    @media (min-width: 690px) { li { width: calc((100% - 10 * #{$switchs_margin_horizontal})/5); } }
+    @media (min-width: 680px) { li { width: calc((100% - 8 * #{$switchs_margin_horizontal})/4); } }
 
-    @media (min-width: 830px) { li { width: calc((100% - 12 * #{$switchs_margin_horizontal})/6); } }
+    @media (min-width: 840px) { li { width: calc((100% - 10 * #{$switchs_margin_horizontal})/5); } }
+
+    @media (min-width: 930px) { li { width: calc((100% - 12 * #{$switchs_margin_horizontal})/6); } }
 
     @media (min-width: 970px) { li { width: calc((100% - 14 * #{$switchs_margin_horizontal})/7); } }
 
     @media (min-width: 1110px) { li { width: calc((100% - 16 * #{$switchs_margin_horizontal})/8); } }
 
     @media (min-width: 1250px) { li { width: calc((100% - 18 * #{$switchs_margin_horizontal})/9); } }
-
+ */
     @media (min-width: 1920px) { 
         
         $switch_width: 130px;
