--- a/styles/css/identity.css
+++ b/styles/css/identity.css
@@ -458,10 +458,9 @@ TODO: Skills - Table
   font-size: 0;
   margin-left: calc(0.5 * 20px);
   margin-right: calc(0.5 * 20px);
-  text-align: center;
-  /* display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
   /* 
     li { width: calc((100% - 2 * 10px)/1); } 
 
